Not create CastRemotingConnector if MediaRouter is disabled.

CastRemotingConnector depends on MediaRouter, which should not be
created when MediaRouter is disabled by an admin policy.

Bug: 836042
Change-Id: Ibd03b5f7c0cb875173cb8c6c573f34a12f0e22b4
Reviewed-on: https://chromium-review.googlesource.com/1026252
Reviewed-by: Adam Parker <amp@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553932}
Former-commit-id: 8d98af56ca3e0b7d461ca2c8c6e3794031879f64